2005-09-30  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/23953
	* include/bits/locale_facets.tcc (__numpunct_cache<>::_M_cache,
	__moneypunct_cache<>::_M_cache): Check that grouping()[0] > 0.
	(__verify_grouping): Do the last check only if __grouping[__min] > 0.
	(__add_grouping<>): End recursion if *__gbeg <= 0.
	* testsuite/22_locale/num_get/get/char/23953.cc: New.
	* testsuite/22_locale/num_get/get/wchar_t/23953.cc: Likewise.
	* testsuite/22_locale/num_put/put/char/23953.cc: Likewise.
	* testsuite/22_locale/num_put/put/wchar_t/23953.cc: Likewise.

2005-09-29  Chris Jefferson <chris@bubblescope.net>

	PR libstdc++/23978
	* include/tr1/tuple_iterate.h (tuple): Add operator=(std::pair).
	* testsuite/tr1/6_containers/tuple/creation_functions/23978.cc: New.
	
	* include/tr1/functional (ref, cref): Make inline.
	* include/tr1/tuple_iterate.h (tie): Correct formatting.
	(make_tuple): Make inline.

2005-09-25  Benjamin Kosnik  <bkoz@redhat.com>
	    Eric Botcazou  <ebotcazou@libertysurf.fr>

	* include/ext/mt_allocator.h
	(__per_type_pool<...true>::_S_initialize_once): Always call
	_M_initialize_once.
	(__common_pool<...true>::_S_initialize_once): Same.

2005-09-23  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/ext/mt_allocator/tune-1.cc: Clarify for single-thread.
	* testsuite/ext/mt_allocator/tune-2.cc: Same.
	* testsuite/ext/mt_allocator/tune-3.cc: Same.
	* testsuite/ext/mt_allocator/tune-4.cc: Same.

2005-09-21  Guillaume Melquiond  <guillaume.melquiond@ens-lyon.fr>

	PR libstdc++/23956
	* include/ext/mt_allocator.h: Remove excess
	policy_type::_S_get_pool calls in constructors.
	
2005-09-18  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/23417 (cont)
	* include/bits/stl_tree.h (_Rb_tree_impl<true>): Use member
	initialization list for -Weffc++.

2005-09-16  Janis Johnson  <janis187@us.ibm.com>

	* testsuite/27_io/basic_ostream/inserters_arithmetic/char/23871.cc:
	New.

2005-09-15  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/21674
	PR libstdc++/22205